sass/_sidebar.scss
.sidebar {
  background-color: hsl(0, 0%, 96%);
  display: flex;
  flex-direction: column;
  height: 100vh;
  padding: 1rem;
  position: fixed;
  top: 0;
  transition: left 0.2s linear;
  width: 20rem;

  z-index: 32;

  .menu-brand {
    padding-bottom: 1rem;
  }
}

.collapsing-list {
  display: flex;
  flex-basis: fit-content;
  flex-direction: column;
  overflow-y: auto;
}

* {
  scrollbar-color: #8AADE5 rgba(0, 0, 0, 0);
  scrollbar-width: thin;
}

*::-webkit-scrollbar {
  width: 7px;
}

*::-webkit-scrollbar-track {
  background-color: rgba(0, 0, 0, 0.0);
}

*::-webkit-scrollbar-thumb {
  background-color: #8AADE5;
  border-radius: 7px;
  border: 3px solid rgba(0, 0, 0, 0.0);
}

.sidebar-overlay {
  background-color: rgba(0, 0, 0, 0.5);
}

.has-sidebar {
  transition: filter 0.2s linear;
}

.sidebar .footer-container {
  margin-top: auto;
}

@media(min-width: 1024px) {
  .sidebar {
    left: 0;
  }

  .sidebar-overlay {
    display: none;
  }

  .has-sidebar {
    margin-left: 20rem;
  }

  .has-sidebar > section.section {
    padding-top: 2rem;
    padding-left: 2rem;
  }

  .navbar.is-fixed-top {
    padding-left: 20rem;
  }
}

@media(max-width: 1024px) {
  .sidebar:not(.is-active) {
    left: -20rem;
  }

  .sidebar.is-active {
    background-color: hsl(0, 0%, 96%);
    min-height: 100vh;
    left: 0;
    padding: 1rem;
    position: fixed;
    top: 0;
    width: 20rem;
  }

  .sidebar-overlay {
    display: block;
    opacity: 0;
    transition: opacity 0.2s linear;
  }

  .sidebar-overlay.is-active {
    left: 0rem;
    opacity: 100%;
    position: fixed;
    min-height: 100vh;
    top: 0;
    min-width: 100vw;
    z-index: 31;
  }

  .navbar-burger {
    margin-left: inherit;
  }
}

.menu-brand {
  align-content: center;
  align-self: center;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
}

.menu-brand img {
  flex-grow: 0;
  flex-shrink: 1;
}

.menu-brand:hover {
  /* TODO: Uncomment when we have a logo */

  /*
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 2px;
  */
}

.menu-list a:hover:not(.is-active) {
  color: rgb(50, 115, 220);
}

/** Divider shouldn't have a gap if it's empty **/

.sidebar :empty.divider {
  display: block;
  margin-top: 14px;
  margin-bottom: 14px;
}

:empty.divider:before {
  margin-right: 0;
}

:empty.divider:after {
  margin-left: 0;
}

